<?xml version="1.0"?>
<package format="2">
    <name>my_client_class</name>
    <version>0.0.0</version>
    <description>The my_client_class package</description>

    <maintainer email="kisa0828@naver.com">kiseok</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>my_server_class</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>my_server_class</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>my_server_class</exec_depend>

  <export>
  </export>
</package>