<?xml version="1.0"?>
<package format="2">
    <name>my_tf_practice</name>
    <version>0.0.0</version>
    <description>The my_tf_practice package</description>

    <maintainer email="kisa0828@naver.com">kiseok</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>tf</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>