<?xml version="1.0"?>
<package format="2">
    <name>mybot_description</name>
    <version>0.0.0</version>
    <description>The mybot_description package</description>

    <maintainer email="kisa0828@naver.com">kiseok</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>urdf</build_depend>
    <build_depend>rospy</build_depend>


    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>urdf</build_export_depend>
    <build_export_depend>rospy</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>