<?xml version="1.0"?>
<package format="2">
    <name>random_gen_yaw</name>
    <version>0.0.0</version>
    <description>The random_gen_yaw package</description>

    <maintainer email="kisa0828@naver.com">kiseok</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>random_gen_x</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>random_gen_x</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>random_gen_x</exec_depend>

  <export>
  </export>
</package>